# python-api

./: .gitignore  CHANGES.txt  README.md  pyproject.toml  pyvenv.cfg  setup.cfg  setup.py
identify/clients/: base_client.py  sync_client.py
identify/http_clients/: base_client.py  sync_client.py
identify/main/: __init__.py  identify_client.py  identify_sync_client.py
identify/microclients/: __init__.py  attribute_microclient.py  environment_microclient.py  identity_microclient.py  traffic_type_microclient.py
identify/resources/: __init__.py  attribute.py  base_resource.py  environment.py  identity.py  traffic_type.py
identify/tests/e2e/: e2etests.py  server.py  test_e2e.py
identify/tests/http_clients/: test_base_http_client.py  test_sync_http_client.py
identify/tests/microclients/: attribute_microclient_test.py  environment_microclient_test.py  identity_microclient_test.py  traffic_type_microclient_test.py
identify/tests/resources/: test_attribute.py  test_base_resource.py  test_environment.py  test_identity.py  test_traffic_type.py
identify/tests/util/: test_camelcase.py
identify/util/: abstract_extra.py  camelcase.py  exceptions.py  logger.py  validation.py
splitapiclient/: version.py
splitapiclient/http_clients/: base_client.py  harness_client.py  sync_client.py
splitapiclient/main/: __init__.py  apiclient.py  harness_apiclient.py  sync_apiclient.py
splitapiclient/microclients/: __init__.py  apikey_microclient.py  attribute_microclient.py  change_request_microclient.py  environment_microclient.py  flag_set_microclient.py  group_microclient.py  identity_microclient.py  large_segment_definition_microclient.py  large_segment_microclient.py  restriction_microclient.py  rule_based_segment_definition_microclient.py  rule_based_segment_microclient.py  segment_definition_microclient.py  segment_microclient.py  split_definition_microclient.py  split_microclient.py  traffic_type_microclient.py  user_microclient.py  workspace_microclient.py
splitapiclient/microclients/harness/: __init__.py  harness_apikey_microclient.py  harness_user_microclient.py  (+7 more)
splitapiclient/resources/: __init__.py  apikey.py  attribute.py  base_resource.py  bucket.py  change_request.py  condition.py  default_rule.py  environment.py  flag_set.py  group.py  identity.py  large_segment.py  large_segment_definition.py  matcher.py  restriction.py  rule.py  rule_based_segment.py  rule_based_segment_definition.py  segment.py  segment_definition.py  segments.py  split.py  split_definition.py  traffic_type.py  treatment.py  user.py  workspace.py
splitapiclient/util/: bulk_result.py  camelcase.py  exceptions.py  fetch_options.py  helpers.py  validation.py
(+95 files in other folders)
