[aliases]
test=pytest

[tool:pytest]
addopts = --verbose

[metadata]
name = splitapiclient
version = 3.1.5
description = This Python Library provide full support for Split REST Admin API, allow creating, deleting and editing Environments, Splits, Split Definitions, Segments, Segment Keys, Users, Groups, API Keys, Change Requests, Attributes and Identities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/splitio/python-api
project_urls =
    Bug Tracker = https://github.com/splitio/python-api/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
